methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:11: error: ambiguous reference to overloaded definition,
both method run in class SlugTracking of type ()Unit
and  method run in class SlugTracking of type ()Unit
match argument types ()
run() 
^SlugTracking:9: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime6.SlugTracking'
def run(){while(!estSurBiscuit()){if(isFacingTrail()){avance()};else{droite()}}
    ^